FIX: Featured image not stretching to the screen

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -189,7 +189,7 @@ h2 {
 
 @media (min-width: 756px) {
   #featured-image {
-    width: fit-content;
+    width: cover;
   }
 
   .item,
